--- a/prtf.html
+++ b/prtf.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8"/>
 	<title>Мое портфолио</title>
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 </head>
 <body bgcolor="#cfcfcf">
 	<h1 align="center">Мой сайт портфолио</h1>
